--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,7 @@
   .btn {
     @apply bg-green-500 tracking-wider w-full text-center text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md hover:bg-green-600 transition-colors block
   }
+  .txt-area-input {
+    @apply resize-none border border-slate-500 w-full block my-2 px-4 py-2 rounded-sm
+  }
 }
